<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.witicar.medbeacon.activities.WelcomeActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF">

        <!-- /////////////// Name ////////////// -->

        <TextView
            android:id="@+id/login_login_text"
            android:layout_width="@dimen/text_login_width"
            android:layout_height="@dimen/login_register_height"
            android:gravity="center_vertical"
            android:text="@string/login_username"
            android:textColor="@color/dark_gray"
            android:layout_margin="@dimen/login_register_margin"/>

        <TextView
            android:id="@+id/login_password_text"
            android:layout_width="@dimen/text_login_width"
            android:layout_height="@dimen/login_register_height"
            app:layout_constraintTop_toBottomOf="@id/login_login_text"
            android:gravity="center_vertical"
            android:text="@string/login_password"
            android:textColor="@color/dark_gray"
            android:layout_margin="@dimen/login_register_margin"/>

        <!-- /////////////// Field ////////////// -->

        <EditText
            android:id="@+id/login_login_field"
            android:layout_width="@dimen/field_login_width"
            android:layout_height="@dimen/login_register_height"
            app:layout_constraintLeft_toRightOf="@id/login_login_text"
            android:minEms="5"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:background="@color/field_color"
            android:layout_margin="@dimen/login_register_margin"/>

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="@dimen/field_login_width"
            android:layout_height="@dimen/login_register_height"
            android:inputType="textPassword"
            android:minEms="5"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/login_password_text"
            app:layout_constraintTop_toBottomOf="@id/login_login_field"
            android:background="@color/field_color"
            android:layout_margin="@dimen/login_register_margin"/>

        <!--////////////////////////// Button //////////////////////-->

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/login_password_text"
            android:layout_marginTop="@dimen/login_register_margin"
            android:onClick="login" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/createAccount"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            android:onClick="createAccount"/>

        <!--//////////////////////Wrong Field Data/////////////////////////////////-->

        <TextView
            android:id="@+id/login_wrong_login"
            android:layout_width="@dimen/field_register_width"
            android:layout_height="@dimen/login_register_height"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/login_login_field"
            app:layout_constraintLeft_toRightOf="@id/login_login_text"
            android:layout_marginLeft="@dimen/login_register_margin"
            android:text="@string/login_wrong"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/login_wrong_password"
            android:layout_width="@dimen/field_register_width"
            android:layout_height="@dimen/login_register_height"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/login_password_field"
            app:layout_constraintLeft_toRightOf="@id/login_password_text"
            android:layout_marginLeft="@dimen/login_register_margin"
            android:text="@string/login_wrong"
            android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
